# ansible-role-rhoso-proteccio-hsm

./: AUTHORS  README.md  setup.cfg
defaults/: main.yml
files/: image_add_proteccio_client.sh
meta/: main.yml
tasks/: create_image.yml  create_secrets.yml  main.yml
templates/: login_secret.yml.j2  proteccio_data_secret.yml.j2
