[metadata]
name = ansible-role-rhoso-proteccio-hsm
summary = ansible-role-rhoso-proteccio-hsm - Ansible role to configure Eviden Proteccio HSM clients for RHOSO.
description_file =
    README.md
author = RHOSO Security DFG
author_email = mharley@redhat.com
home_page = https://github.com/openstack-k8s-operators/ansible-role-rhoso-proteccio-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[files]
data_files =
    share/ansible/roles/rhoso_proteccio_hsm/defaults = defaults/*
    share/ansible/roles/rhoso_proteccio_hsm/meta = meta/*
    share/ansible/roles/rhoso_proteccio_hsm/tasks = tasks/*
    share/ansible/roles/rhoso_proteccio_hsm/templates = templates/*
    share/ansible/roles/rhoso_proteccio_hsm/files = files/*
